# Document-Renderer-Backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: config.py  main.py  tasks.py
src/core/: renderer.py
src/utils/: S3Storage.py
templates/Army/: .json
templates/SocialFoundaton/: .json
templates/Std/: .json
