[project]
name = "document-renderer-backend"
version = "0.1.0"
description = "Document renderer with Taskiq worker"
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "aioboto3>=15.5.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.6.0",
    "taskiq-redis>=1.2.2",
    "weasyprint>=68.1",
]
