[project]
name = "s3integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "weasyprint>=68.1",
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.6.0",
    "taskiq-redis>=1.2.2",
]
